@@ -1,9 +1,14 @@
 2003-03-17  Theodore A. Roth  <troth@openavr.org>
 
+	* include/avr/pgmspace.h: Document PRG_RDB [Bug #2839].
+	Change strncat to strncat_P [Bug #2838].
+
+2003-03-17  Theodore A. Roth  <troth@openavr.org>
+
 	* configure.in (AM_INIT_AUTOMAKE): Bump version.
 	* include/stdio.h, libc/stdio/fdevopen.c:
 	Move dox comment for fdevopen() from stdio.h to fdevopen.c to work
-	around a broken html link due to a bug in doxygen.
+	around a broken html link due to a bug in doxygen. [Bug #2845]
 
 2003-03-03  Theodore A. Roth  <troth@openavr.org>
 
